--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "mongoose": "^5.1.6",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
