--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "food-app",
+  "name": "mern",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "concurrently \"nodemon app.js\" \"cd client && npm start\""
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "concurrently": "^3.6.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "ejs": "~2.5.2",
     "express": "~4.14.0",
-    "mongoose": "^5.1.6",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
