trying to get fetch working with express route

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "helmet": "^3.12.1",
     "mongoose": "^5.1.7",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
