--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "concurrently \"nodemon app.js\" \"cd client && npm start\""
+    "start": "concurrently \"node app.js\" \"cd client && npm start\""
   },
   "dependencies": {
     "body-parser": "~1.15.2",
