--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,10 @@
     "jquery": "^3.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.1",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,5 +19,4 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3001"
-
 }
