--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^3.12.1",
     "mongoose": "^5.1.7",
     "morgan": "~1.7.0",
+    "redux-thunk": "^2.3.0",
     "serve-favicon": "~2.3.0",
     "session": "^0.1.0"
   }
