--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.0",
     "express-session": "^1.15.6",
     "helmet": "^3.12.1",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.7",
     "morgan": "~1.7.0",
     "redux-thunk": "^2.3.0",
