--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.7",
     "morgan": "~1.7.0",
+    "nodemailer": "^4.6.8",
     "react-icons": "^3.2.2",
     "redux-thunk": "^2.3.0",
     "serve-favicon": "~2.3.0",
